--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "9.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-scroll-parallax": "^2.3.2"
+    "react-scroll-parallax": "^2.3.2",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -20,6 +21,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier-eslint": "^9.0.1"
+    "prettier-eslint": "^10.1.1"
   }
 }
